...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Character Detail-->
        <scene sceneID="V2M-4x-QcW">
            <objects>
                <viewController storyboardIdentifier="CharacterDetailContainerViewController" title="Character Detail" useStoryboardIdentifierAsRestorationIdentifier="YES" id="egZ-5I-gfF" customClass="CharacterDetailContainerViewController" customModule="CharacterDetailKit" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="olF-jV-xhS">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <viewLayoutGuide key="safeArea" id="8pb-YK-5QX"/>
                    </view>
...
